# trailofbits_circomspect

circom_algebra/: Cargo.toml
cli/: Cargo.toml
parser/: Cargo.toml
program_analysis/: Cargo.toml
program_structure/: Cargo.toml
program_structure_tests/: Cargo.toml
