[package]
name = "circomspect-program-structure"
version = "2.1.4"
edition = "2021"
rust-version = "1.65"
license = "LGPL-3.0-only"
description = "Support crate for the Circomspect static analyzer"
repository = "https://github.com/trailofbits/circomspect"
authors = [
  "hermeGarcia <hermegarcianavarro@gmail.com>",
  "Fredrik Dahlgren <fredrik.dahlgren@trailofbits.com>",
]

[dependencies]

[dev-dependencies]
proptest = "1.1"
circom_algebra = { package = "circomspect-circom-algebra", version = "2.0.2", path = "../circom_algebra" }
